web: add info()

--- a/amsn2/ui/front_ends/web/static/amsn2.html
+++ b/amsn2/ui/front_ends/web/static/amsn2.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="static/js/amsn2.js"></script>
   </head>
   <body>
+    <div id="info"></div>
     <div id="login" style="display:none">
       <form id="signin" action="/signin">
       Username:<input name="username" type="text" /> <br/>
