web: add error functions

--- a/amsn2/ui/front_ends/web/static/amsn2.html
+++ b/amsn2/ui/front_ends/web/static/amsn2.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="info"></div>
+    <div id="error"></div>
     <div id="login" style="display:none">
       <form id="signin" action="/signin">
       Username:<input name="username" type="text" /> <br/>
@@ -40,6 +41,7 @@
         });
         event.stop();
       });
+
     </script>
 
   </body>
