web: add debug function. closes #21

--- a/amsn2/ui/front_ends/web/static/amsn2.html
+++ b/amsn2/ui/front_ends/web/static/amsn2.html
@@ -12,6 +12,7 @@
   <body>
     <div id="info"></div>
     <div id="error"></div>
+    <div id="debug"></div>
     <div id="login" style="display:none">
       <form id="signin" action="/signin">
       Username:<input name="username" type="text" /> <br/>
