--- a/amsn2/ui/front_ends/web/static/amsn2.html
+++ b/amsn2/ui/front_ends/web/static/amsn2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>aMSN2 FrontEnd</title>
+    <title>aMSN2 Web FrontEnd</title>
     <script type="text/javascript" src="static/js/prototype.js"></script>
     <script type="text/javascript" src="static/js/effects.js"></script>
     <script type="text/javascript" src="static/js/window.js"></script>
