web: wip on changing presence

--- a/amsn2/ui/front_ends/web/static/amsn2.html
+++ b/amsn2/ui/front_ends/web/static/amsn2.html
@@ -45,5 +45,33 @@
 
     </script>
 
+<div class="itemList" id="presenceList" style="display:none">
+  <a href="#" onclick="setPresence(0);return false;">
+    <img src="images/online.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;I'm available
+  </a>
+  <a href="#" style="border-bottom: 1px solid #bfbcb8;"
+    onclick="setPresence(1);return false;">
+    <img src="images/busy.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;I'm busy
+  </a>
+  <a href="#" onclick="setPresence();return false;">
+    <img src="images/away.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;
+  </a>
+  <a href="#" onclick="setPresence();return false;">
+    <img src="images/away.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;
+  </a>
+  <a href="#" onclick="setPresence();return false;">
+    <img src="images/away.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;
+  </a>
+  <a href="#" style="border-top: 1px solid #bfbcb8;"
+    onclick="setPresence();return false;">
+    <img src="images/offline.png" style="border:0;" alt="" title="" />
+    &nbsp;&nbsp;
+  </a>
+</div>
   </body>
 </html>
